--- a/playroom/src/main/resources/messages.properties
+++ b/playroom/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 ###############################
 ##         Messages          ##
 ###############################
-message.addtoy=The toy has been added!
+message.addnewtoy=The toy has been added!
+message.addnewtoy.incorrect=The toy cannot be added!
 message.wrongrequest=The command not found or wrong!
