Moved data source

--- a/playroom/src/main/resources/messages.properties
+++ b/playroom/src/main/resources/messages.properties
@@ -1,6 +1,31 @@
 ###############################
 ##         Messages          ##
 ###############################
-message.addnewtoy=The toy has been added!
-message.addnewtoy.incorrect=The toy cannot be added!
+message.playroom.create.correct=The play room was created successfully!
+message.playroom.create.failed=Failed to create play room!
+
+message.add.correct=The toy has been added!
+message.add.failed=Failed to add the toy!
+
+message.update.correct=The toy data was updated successfully!
+message.update.failed=Failed to update the toy's data!
+
+message.remove.correct=The toy data was updated successfully!
+message.remove.failed=Failed to update the toy's data!
+
+message.find.by.id.correct=The toy with specified ID was found!
+message.find.by.id.failed=Failed to find the toy with provided ID!
+
+message.find.by.title.correct=The toys with provided title was found!
+message.find.by.title.failed=Failed to find the toys by title!
+
+message.find.by.first.letter.correct=The toys with provided first letter was found!
+message.find.by.first.letter.failed=Failed to find the toys by first letter!
+
+
+message.incorrect.args.number=Incorrect parameters number!
+message.incorrect.args.format=Incorrect parameters format!
+
 message.wrongrequest=The command not found or wrong!
+
+
