Added code for all the commands

--- a/playroom/src/main/resources/messages.properties
+++ b/playroom/src/main/resources/messages.properties
@@ -16,12 +16,23 @@ message.remove.failed=Failed to update the toy's data!
 message.find.by.id.correct=The toy with specified ID was found!
 message.find.by.id.failed=Failed to find the toy with provided ID!
 
-message.find.by.title.correct=The toys with provided title was found!
+message.find.by.title.correct=The toys with provided title was found:
 message.find.by.title.failed=Failed to find the toys by title!
 
-message.find.by.first.letter.correct=The toys with provided first letter was found!
+message.find.by.first.letter.correct=The toys with provided first letter was found:
 message.find.by.first.letter.failed=Failed to find the toys by first letter!
 
+message.find.by.range.id.correct=The toys in ID range was found:
+message.find.by.range.id.failed=Failed to find the toys in the provided ID range!
+
+message.find.all.correct=All toys in the play room storage:
+message.find.all.failed=Failed to find the toys!
+
+message.sort.by.age.correct=The play room storage was sorted by age! Use Print all command to display.
+message.sort.by.age.failed=Failed to sort play room storage by age!
+
+message.sort.by.color.and.price.correct=The play room storage was sorted by color and price! Use Print all command to display.
+message.sort.by.color.and.price.failed=Failed to sort play room storage by color and price!
 
 message.incorrect.args.number=Incorrect parameters number!
 message.incorrect.args.format=Incorrect parameters format!
