Added save to file command

--- a/playroom/src/main/resources/messages.properties
+++ b/playroom/src/main/resources/messages.properties
@@ -37,6 +37,9 @@ message.sort.by.color.and.price.failed=Failed to sort play room storage by color
 message.incorrect.args.number=Incorrect parameters number!
 message.incorrect.args.format=Incorrect parameters format!
 
-message.wrongrequest=The command not found or wrong!
+message.save.correct=The storage was saved! Goodbye!
+message.save.failed=Failed to save storage!
+
+message.wrong.request=The command not found or wrong!
 
 
