--- a/playroom/src/main/resources/messages.properties
+++ b/playroom/src/main/resources/messages.properties
@@ -9,9 +9,11 @@ message.add.failed=Failed to add the toy!
 
 message.update.correct=The toy data was updated successfully!
 message.update.failed=Failed to update the toy's data!
+message.update.not.found=The entity with provided ID was not found in the storage!
 
 message.remove.correct=The toy data was updated successfully!
 message.remove.failed=Failed to update the toy's data!
+message.remove.not.found=The entity with provided ID was not found in the storage!
 
 message.find.by.id.correct=The toy with specified ID was found!
 message.find.by.id.failed=Failed to find the toy with provided ID!
@@ -34,11 +36,14 @@ message.sort.by.age.failed=Failed to sort play room storage by age!
 message.sort.by.color.and.price.correct=The play room storage was sorted by color and price! Use Print all command to display.
 message.sort.by.color.and.price.failed=Failed to sort play room storage by color and price!
 
+message.save.correct=The storage was saved! Goodbye!
+message.save.failed=Failed to save storage!
+
 message.incorrect.args.number=Incorrect parameters number!
 message.incorrect.args.format=Incorrect parameters format!
 
-message.save.correct=The storage was saved! Goodbye!
-message.save.failed=Failed to save storage!
+message.entity.not.found=The entity was not found in the storage!
+message.entities.not.found=The entities were not found in the storage!
 
 message.wrong.request=The command not found or wrong!
 
