added save last result command.

--- a/matrix/src/main/resources/messages.properties
+++ b/matrix/src/main/resources/messages.properties
@@ -2,10 +2,11 @@
 ##         Messages          ##
 ###############################
 message.matrix.create.correct=The matrix was created successful!
+message.save.last.result.correct=The last result was saved!
 
 message.incorrect.args.number=Incorrect parameters number!
 
-message.reset.correct=The matrix was reset!
+
 
 message.exit.correct=Goodbye!
 
