--- a/composite/src/main/resources/messages.properties
+++ b/composite/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 ###############################
 ##         Messages          ##
 ###############################
-message.matrix.create.correct=The matrix was created successful!
+message.composite.create.correct=The composite was created successful!
 
 message.save.last.result.correct=The last result was saved!
 
