added controller stub

--- a/webparsing/src/main/resources/messages.properties
+++ b/webparsing/src/main/resources/messages.properties
@@ -1,14 +1,5 @@
 ###############################
 ##         Messages          ##
 ###############################
-message.composite.create.correct=The composite was created successful!
-
-message.save.last.result.correct=The last result was saved!
-
-message.incorrect.args.number=Incorrect parameters number!
-
-message.exit.correct=Goodbye!
-
-message.wrong.request=The command not found or wrong!
-
-
+message.null.page=Page not found! Business logic error!
+message.wrong.command=The command not found or wrong!
