--- a/webparsing/src/main/resources/messages.properties
+++ b/webparsing/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 ###############################
 ##         Messages          ##
 ###############################
-message.null.page=Page not found! Business logic error!
+message.null.page=Business logic error!
 message.empty.filename=Select the file first, please!
 message.not.valid.file=Selected file is not xml-document!
 message.wrong.command=The command not found or wrong!
