--- a/hitcher/src/main/resources/pagecontent_be.properties
+++ b/hitcher/src/main/resources/pagecontent_be.properties
@@ -1,16 +1,16 @@
-navbar.link.about=А нас
-navbar.link.contract=Кантракт
-navbar.link.forgot.pass=Запамятавалi пароль?
-navbar.link.login=Увайсці
-navbar.link.register=Зарэгістравацца
-navbar.link.services=Сэрвісы
-navbar.login.welcome=Сардэчна запрашаем!
-navbar.link.profile=Профіль
-navbar.remember.pass=Запамятаваць пароль
-navbar.link.logout=Выйсці
-navbar.form.username=Імя карыстальніка
-navbar.form.password=Пароль
-navbar.form.password.confirm=Пароль
-navbar.form.email=Адрас электроннай пошты
-footer.copyright=Ўсе правы абаронены &copy; WhereUWannaGO 2019
-index.find.trip=Знайсці паездку
+navbar.link.about=\u0410 \u043D\u0430\u0441
+navbar.link.contract=\u041A\u0430\u043D\u0442\u0430\u043A\u0442\u044B
+navbar.link.forgot.pass=\u0417\u0430\u043F\u0430\u043C\u044F\u0442\u0430\u0432\u0430\u043Bi \u043F\u0430\u0440\u043E\u043B\u044C?
+navbar.link.login=\u0423\u0432\u0430\u0439\u0441\u0446\u0456
+navbar.link.register=\u0417\u0430\u0440\u044D\u0433\u0456\u0441\u0442\u0440\u0430\u0432\u0430\u0446\u0446\u0430
+navbar.link.services=\u0421\u044D\u0440\u0432\u0456\u0441\u044B
+navbar.login.welcome=\u0421\u0430\u0440\u0434\u044D\u0447\u043D\u0430 \u0437\u0430\u043F\u0440\u0430\u0448\u0430\u0435\u043C!
+navbar.link.profile=\u041F\u0440\u043E\u0444\u0456\u043B\u044C
+navbar.remember.pass=\u0417\u0430\u043F\u0430\u043C\u044F\u0442\u0430\u0432\u0430\u0446\u044C \u043F\u0430\u0440\u043E\u043B\u044C
+navbar.link.logout=\u0412\u044B\u0439\u0441\u0446\u0456
+navbar.form.username=\u0406\u043C\u044F \u043A\u0430\u0440\u044B\u0441\u0442\u0430\u043B\u044C\u043D\u0456\u043A\u0430
+navbar.form.password=\u041F\u0430\u0440\u043E\u043B\u044C
+navbar.form.password.confirm=\u041F\u0430\u0446\u0432\u0435\u0440\u0434\u0437\u0456\u0446\u044C \u043F\u0430\u0440\u043E\u043B\u044C
+navbar.form.email=\u0410\u0434\u0440\u0430\u0441 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430\u0439 \u043F\u043E\u0448\u0442\u044B
+footer.copyright=\u040E\u0441\u0435 \u043F\u0440\u0430\u0432\u044B \u0430\u0431\u0430\u0440\u043E\u043D\u0435\u043D\u044B &copy; WhereUWannaGO 2019
+index.find.trip=\u0417\u043D\u0430\u0439\u0441\u0446\u0456 \u043F\u0430\u0435\u0437\u0434\u043A\u0443
