--- a/hitcher/src/main/resources/pagecontent_ru.properties
+++ b/hitcher/src/main/resources/pagecontent_ru.properties
@@ -5,7 +5,7 @@ navbar.link.login=\u0412\u043E\u0439\u0442\u0438
 navbar.link.register=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
 navbar.link.services=\u0421\u0435\u0440\u0432\u0438\u0441\u044B
 navbar.login.welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C!
-navbar.link.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+navbar.greetings=\u041F\u0440\u0438\u0432\u0435\u0442
 navbar.remember.pass=\u0417\u0430\u043F\u043E\u043C\u043D\u0438\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C
 navbar.link.logout=\u0412\u044B\u0439\u0442\u0438
 navbar.form.username=\u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
@@ -14,3 +14,5 @@ navbar.form.password.confirm=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0
 navbar.form.email=\u0410\u0434\u0440\u0435\u0441 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u0439 \u043F\u043E\u0447\u0442\u044B
 footer.copyright=\u0412\u0441\u0435 \u043F\u0440\u0430\u0432\u0430 \u0437\u0430\u0449\u0438\u0449\u0435\u043D\u044B &copy; WhereUWannaGO 2019
 index.find.trip=\u041D\u0430\u0439\u0442\u0438 \u043F\u043E\u0435\u0437\u0434\u043A\u0443
+navbar.link.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+navbar.link.language=\u042F\u0437\u044B\u043A
