--- a/hitcher/src/main/resources/pagecontent_be.properties
+++ b/hitcher/src/main/resources/pagecontent_be.properties
@@ -1,3 +1,4 @@
+profile.driver.license.header=\u041C\u0430\u0456 \u043F\u0440\u0430\u0432\u044B \u043A\u0456\u0440\u043E\u045E\u0446\u044B
 navbar.link.about=\u0410 \u043D\u0430\u0441
 navbar.link.contract=\u041A\u0430\u043D\u0442\u0430\u043A\u0442\u044B
 navbar.link.forgot.pass=\u0417\u0430\u043F\u0430\u043C\u044F\u0442\u0430\u0432\u0430\u043Bi \u043F\u0430\u0440\u043E\u043B\u044C?
@@ -16,3 +17,16 @@ footer.copyright=\u040E\u0441\u0435 \u043F\u0440\u0430\u0432\u044B \u0430\u0431\
 index.find.trip=\u0417\u043D\u0430\u0439\u0441\u0446\u0456 \u043F\u0430\u0435\u0437\u0434\u043A\u0443
 navbar.link.profile=\u041F\u0440\u043E\u0444\u0456\u043B\u044C
 navbar.link.language=\u041C\u043E\u0432\u0430
+error.title=\u041F\u0430\u043C\u044B\u043B\u043A\u0430!
+navbar.link.user.list=\u0421\u043F\u0456\u0441 \u043A\u0430\u0440\u044B\u0441\u0442\u0430\u043B\u044C\u043D\u0456\u043A\u0430\u045E
+profile.preferences=\u041F\u0435\u0440\u0430\u0432\u0430\u0433\u0456
+profile.personal.data=\u041F\u0435\u0440\u0441\u0430\u043D\u0430\u043B\u044C\u043D\u0430\u044F \u0456\u043D\u0444\u0430\u0440\u043C\u0430\u0446\u044B\u044F
+profile.driver.license=\u041F\u0440\u0430\u0432\u044B \u043A\u0456\u0440\u043E\u045E\u0446\u044B
+profile.email=\u0410\u0434\u0440\u0430\u0441 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430\u0439 \u043F\u043E\u0448\u0442\u044B
+profile.review=\u0412\u043E\u0434\u0433\u0443\u043A\u0456
+profile.pass=\u041F\u0430\u0440\u043E\u043B\u044C
+profile.personal.data.header=\u041C\u0430\u044F \u043F\u0435\u0440\u0441\u0430\u043D\u0430\u043B\u044C\u043D\u0430\u044F \u0456\u043D\u0444\u0430\u0440\u043C\u0430\u0446\u044B\u044F
+profile.preferences.header=\u041C\u0430\u0456 \u043F\u0435\u0440\u0430\u0432\u0430\u0433\u0456
+profile.email.header=\u041C\u043E\u0439 \u0430\u0434\u0440\u0430\u0441 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430\u0439 \u043F\u043E\u0448\u0442\u044B
+profile.review.header=\u041C\u0430i \u0432\u043E\u0434\u0433\u0443\u043A\u0456
+profile.pass.header=\u041C\u043E\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
